# vgi-cbor

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  docker-entrypoint.sh  run_tests.sh  vgi-lint.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  docker-publish.yml  release.yml
ci/: check-version.sh  preprocess-require.awk  run-integration.sh
crates/cbor-core/: Cargo.toml
crates/cbor-core/src/: lib.rs  seq.rs  validate.rs  value.rs
crates/cbor-core/src/codec/: diagnostic.rs  encode.rs  json.rs  mod.rs  msgpack.rs  tags.rs
crates/cbor-core/src/security/: cose.rs  cose_key.rs  cwt.rs  mod.rs  registry.rs  webauthn.rs
crates/cbor-core/tests/: fuzz.rs  vectors.rs
crates/cbor-wasm/: Cargo.toml
crates/cbor-wasm/src/: lib.rs
crates/cbor-worker/: Cargo.toml
crates/cbor-worker/src/: arrow_io.rs  lib.rs  main.rs  meta.rs  value_in.rs
crates/cbor-worker/src/scalar/: codec.rs  common.rs  cose.rs  cwt.rs  mod.rs  msgpack.rs  version.rs  webauthn.rs
crates/cbor-worker/src/table/: mod.rs  seq.rs  webauthn.rs
test/sql/: basic.test
wasm/: build.sh
