[package]
name = "cbor-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Pure-compute CBOR / MessagePack / COSE / CWT / WebAuthn structural decoders for the cbor VGI worker (no Arrow / VGI deps)"

[dependencies]
# CBOR codec + dynamic Value + tag support. Apache-2.0. `serde_cbor` is archived
# and deliberately avoided; ciborium is the maintained permissive choice.
ciborium = "0.2.2"
ciborium-io = "0.2.2"
# MessagePack dynamic Value (MIT) + serde encode path.
rmpv = "1.3"
rmp-serde = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# AAGUID -> canonical UUID string (MIT/Apache-2.0).
uuid = "1"
hex = "0.4"
base64 = "0.22"

[dev-dependencies]
proptest = "1"

[lints.rust]
unsafe_code = "forbid"
