[package]
name = "cbor-worker"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "VGI worker exposing CBOR / MessagePack / COSE / CWT / WebAuthn decode & encode functions to DuckDB over Apache Arrow"

[[bin]]
name = "cbor-worker"
path = "src/main.rs"

[dependencies]
vgi.workspace = true
vgi-rpc.workspace = true
arrow.workspace = true
arrow-array.workspace = true
arrow-buffer.workspace = true
arrow-schema.workspace = true
cbor-core.workspace = true
# Used directly by the encode paths (value_in.rs / msgpack.rs) to build the
# dynamic CBOR / MessagePack `Value` from Arrow cells. Same versions the core
# crate resolves, so no duplicate-tree concern.
ciborium = "0.2.2"
rmpv = "1.3"
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
cbor-core = { workspace = true }
